--- a/Desafios/Desafio 12/estilo/style.css
+++ b/Desafios/Desafio 12/estilo/style.css
@@ -44,20 +44,39 @@ section {
     line-height: 2em;
 }
 
+section > p {     
+    padding-bottom: 2em;
+}
+
 .normal { 
     background-color: white;
     color: black;
 }
 
-.imagem { 
+.imagem {
     background-color: darkgreen;
+    background-position: right center;
+    background-size: cover;
+    background-attachment: fixed;
     color: white;
-
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.474);
 }
 
+#img1 { 
+    background-image: url(../imagens/background001.jpg);
+}
+
+#img2 { 
+    background-image: url(../imagens/background002.jpg);
+}
 .imagem > p {
+    
+    border-radius: 10px;
+    padding-left: 15px;
+    padding-right: 15px; 
     display: inline-block; 
     background-color: rgba(0, 0, 0, 0.253);
+    text-shadow: 1px 1px 0px black;
 }
 
 a { 
@@ -71,7 +90,8 @@ a:hover {
 }
 
 
-footer { 
+footer {
+    padding: 10px; 
     background-color: black;
     color: white;
     text-align: center;
